# cargo-appimage

./: .gitignore  Cargo.toml
src/: app_image_metadata.rs  application_definition.rs  desktop_file.rs  main.rs
src/commands/: init.rs
src/templates/: desktop.liquid
templates/: desktop.txt
