[package]
name = "cargo-appimage"
version = "0.1.0"
authors = ["Jonathan E. Magen <yonkeltron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.8"
async-std = "1.8"
cargo_toml = "0.8"
clap = "2.33"
color-eyre = "0.5"
paris = "1.5"
rust_info = "0.3"
surf = "2.1"
