[package]
name = "cargo-appimage"
version = "0.1.0-beta1"
authors = ["Jonathan E. Magen <yonkeltron@gmail.com>"]
description = "Cargo subcommand to make Linux AppImages"
homepage = "https://github.com/yonkeltron/cargo-appimage"
repository = "https://github.com/yonkeltron/cargo-appimage"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.8"
async-std = "1.8"
cargo_toml = "0.8"
clap = "2.33"
color-eyre = "0.5"
paris = "1.5"
rust_info = "0.3"
surf = "2.1"
